# cpp-calculator

./: .gitignore  CMakeLists.txt  README.md  build-test  calculator.cpp  calculator.h  compile  test
tests/: calculator.cpp
